<resources>
    <string name="app_name" translatable="false">DamnEat - Restaurant</string>
    <string name="profile_restaurant_address">Restaurant address</string>
    <string name="order_id">Order ID: #%d</string>
    <string name="order_price" translatable="false">%.2f €</string>
    <string name="phone_prefix" translatable="false">+39</string>
    <string name="slot_text" translatable="false">Slot</string>

    <string name="assign_deliverer">Find a deliverer</string>
    <string name="not_registered">You have to fill the profile to add dishes.</string>
    <string name="order_state">State:</string>
    <string name="order_delivery_time">Delivery time: %s</string>
    <string name="order_customer_info">Customer:\n\n%s</string>
    <string name="set_as_shipped">Set as shipped</string>
    <string name="set_as_rejected">Reject order</string>
    <string name="no_free_deliverers">No free deliverers</string>
    <string name="no_availabity">Quantity not available</string>
    <string name="no_customer_info">No customer info</string>
    <string name="show_map">Show on the map</string>
    <string name="sort_closer">Sort by distance</string>
    <string name="sort_alpha">Sort alphabetically</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="sort_totdeliveries">Sort by total number of deliveries</string>
    <string name="assigned_deliverer">Choose as a deliverer</string>
    <string name="title_activity_maps">Maps</string>
    <string name="distance_meter" translatable="false">%d m</string>
    <string name="distance_km" translatable="false">%.1f km</string>
    <string name="deliverer_phone">Phone:</string>
    <string name="most_popular_meals">Most popular meals</string>
    <string name="most_popular_timing_of_order">Most popular timing of order</string>
    <string name="see_reviews_button">See %d reviews</string>
    <string name="restaurant_raiting">Restaurant rating</string>
    <string name="dishes_sold_number">Sold: %d</string>
    <string name="edit_dishes">Edit your dishes</string>
    <string name="reassign_mex">An order was rejected by the deliverer</string>
    <string name="reassign">Reassignment</string>
    <string name="insufficient_quantity">Insufficient quantity</string>
    <string name="unable_open_map">Unable to open maps</string>
    <string name="order_intent_with_key">You must pass an order in the intent with \"order\" key</string>
    <string name="network_error">Network Error! Try again later</string>
    <string name="impossible_map_request">Impossible to map request</string>
    <string name="order_deliverer_info">Deliverer:\n\n%s</string>
    <string name="location_found">Location found</string>
    <string name="impossible_find_location">Impossible to find the location</string>
    <string name="not_registered_statistics" >You have to fill the profile to watch statistics.</string>
</resources>
